Bug 79535 - FILEOPEN: LO getting crash while Opening file in Ubuntu
Summary: FILEOPEN: LO getting crash while Opening file in Ubuntu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: BSA target:4.4.0 target:4.3.3
Keywords: bibisected, regression
: 83805 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-02 10:07 UTC by Tushar Bende
Modified: 2015-12-17 08:22 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
File for which this issue can be reproduced (79.52 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-02 10:09 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-06-02 10:07:11 UTC
Problem description: While Opening Document in LO,Lo getting crash.

Steps to reproduce:
1. Try to Open file in LibreOffice (On Ubuntu Build)

Expected Result:
The file should open properly.

Actual Result:
File crashing LibreOffice writer on open.

              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Last worked in: 4.2.2.1 release
Comment 1 Tushar Bende 2014-06-02 10:09:09 UTC
Created attachment 100280 [details]
File for which this issue can be reproduced
Comment 2 Yousuf Philips (jay) (retired) 2014-06-02 21:43:17 UTC
Confirmed in Linux Mint that it opens in 4.2.6 but crashes in 4.3 beta.
Comment 3 Joel Madero 2014-06-02 22:18:41 UTC
 306d62ec4b911895f08f2bb8efefebed7ac795f0 is the first bad commit
commit 306d62ec4b911895f08f2bb8efefebed7ac795f0
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sat May 10 21:19:04 2014 +0000

    source-hash-735bd120c9ee2d9bb3514907936c27efb75d7282
    
    commit 735bd120c9ee2d9bb3514907936c27efb75d7282
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Mon Dec 16 19:21:35 2013 +0000
    Commit:     Gerrit Code Review <gerrit@gerrit.libreoffice.org>
    CommitDate: Mon Dec 16 19:21:49 2013 +0000
    
        Updated core
        Project: help  a527273352071934f391c38c9e22395d168d79cd

:100644 100644 77fe8f0417e6a56eeb3df9da365e111f163db948 53e2b709f28d0f924ad98e51c9b1b98aaa208546 M	ccache.log
:100644 100644 8ccce3d41d3e599c351b824ed36d520ea8d7f49c 6fb511269af05ab7b64408daa4e888945cd4ab68 M	commitmsg
:100644 100644 ead0101ca49cfe17daa14aaa64ea05cbeff03692 fea3010ae266ad649179a0105c52105b7fe72552 M	make.log
:040000 040000 7d734e210d3afb1a8f9ddc78a482204132f63db6 dda50d068353d2574d136aa929cd7e5a0e9cdd74 M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# skip: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
git bisect skip a043626b542eb8314218d7439534dce2fc325304
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# good: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect good c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# good: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect good c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# good: [30cde618212ecaf5725321372bd1b8339f8e2b9f] source-hash-137f872aa8e6e598e7c7ed1ffa4d21e580e22bdb
git bisect good 30cde618212ecaf5725321372bd1b8339f8e2b9f
# good: [30cde618212ecaf5725321372bd1b8339f8e2b9f] source-hash-137f872aa8e6e598e7c7ed1ffa4d21e580e22bdb
git bisect good 30cde618212ecaf5725321372bd1b8339f8e2b9f
# bad: [306d62ec4b911895f08f2bb8efefebed7ac795f0] source-hash-735bd120c9ee2d9bb3514907936c27efb75d7282
git bisect bad 306d62ec4b911895f08f2bb8efefebed7ac795f0
# bad: [306d62ec4b911895f08f2bb8efefebed7ac795f0] source-hash-735bd120c9ee2d9bb3514907936c27efb75d7282
git bisect bad 306d62ec4b911895f08f2bb8efefebed7ac795f0
# good: [835ce851abe657bb5a8238693ea924287e6890c0] source-hash-1e53784811458563b36fd4cbaa15c2f526a7161b
git bisect good 835ce851abe657bb5a8238693ea924287e6890c0
# good: [835ce851abe657bb5a8238693ea924287e6890c0] source-hash-1e53784811458563b36fd4cbaa15c2f526a7161b
git bisect good 835ce851abe657bb5a8238693ea924287e6890c0
# good: [7d9e0cb59cf7fe20b31a5c291238b5391834c278] source-hash-c828319753558e25a48ce7808604bcc648f2483d
git bisect good 7d9e0cb59cf7fe20b31a5c291238b5391834c278
# good: [03bcabfd9fda01b23178104f5c1b8e2e0053e6b2] source-hash-007bf2b8c04090920b54e914ac75fc13720b450c
git bisect good 03bcabfd9fda01b23178104f5c1b8e2e0053e6b2
# first bad commit: [306d62ec4b911895f08f2bb8efefebed7ac795f0] source-hash-735bd120c9ee2d9bb3514907936c27efb75d7282
Comment 4 Tushar Bende 2014-06-05 07:04:39 UTC
@michael : I have submitted a patch to fix this issue .Can you please verify it https://gerrit.libreoffice.org/9647


I started working on Other issue which is corruption after RT in same file
 bug id : https://www.libreoffice.org/bugzilla/show_bug.cgi?id=79668
Comment 5 Michael Meeks 2014-06-05 08:20:20 UTC
Miklos; one for you to review in gerrit ? =) and thanks Tushar !
Comment 6 Commit Notification 2014-06-05 08:30:47 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8fcd4bf323bc3390e366229d549641444b5a3e9a

fdo#79535 :LO writer crash while Opening some document.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Matthew Francis 2014-09-12 17:24:04 UTC
*** Bug 83805 has been marked as a duplicate of this bug. ***
Comment 8 Matthew Francis 2014-09-12 17:27:05 UTC
Re: duplicate bug 83805

It seems users are still tripping over this in 4.3, so perhaps a backport would be a good thing. It's a small fix, should be uncontroversial...
Comment 9 Commit Notification 2014-09-12 17:34:57 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bea4100cd9ad62637a7ed33488f2a17769aa519a&h=libreoffice-4-3

fdo#79535 :LO writer crash while Opening some document.


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Jean-Baptiste Faure 2014-09-12 20:32:47 UTC
Crash not reproducible anymore with LibreOffice 4.3.3.0.0+ built bea4100cd9ad62637a7ed33488f2a17769aa519a under Ubuntu 14.04 x86-64.

Closing again as resolved Fixed.

Thank you very for the backport.

Best regards. JBF
Comment 11 Robinson Tryon (qubit) 2015-12-17 08:22:40 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]